--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "lucide-react": "^0.436.0"
   }
 }
