--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "firebase": "^9.6.1",
+    "firebase": "^11.0.0",
+    "lucide-react": "^0.344.0",
     "next": "13.5.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.3",
-    "lucide-react": "^0.436.0"
+    "react-dom": "18.2.0"
   }
 }
