--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raffle-system",
+  "name": "rifa-pro",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "firebase": "^11.0.0",
-    "lucide-react": "^0.344.0",
-    "next": "13.5.4",
+    "autoprefixer": "10.4.16",
+    "framer-motion": "10.18.0",
+    "next": "13.5.6",
+    "postcss": "8.4.31",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.3"
   }
 }
